@@ -1585,3 +1585,6 @@ VirtualScreens {
 
 	[Richard Levitte]
 
+   14 - Extend the Info window with the geometry seen from the lower
+	right corner as well.
+	[Richard Levitte]
